--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,51 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/background"
+    android:background="#feb209"
     tools:context=".MainActivity">
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
-
-        <ImageView
-            android:src="@mipmap/eatit1"
-            android:layout_width="200dp"
-            android:layout_height="200dp" />
-
-        <TextView
-            android:gravity="center"
-            android:id="@+id/txtSlogan"
-            android:textColor="@android:color/white"
-            android:text="@string/slogan"
-            android:textSize="@dimen/text_20"
-            android:textStyle="bold"
-            android:fontFamily="@font/nabila"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:orientation="horizontal"
-        android:weightSum="1">
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
 
-        <info.hoang8f.widget.FButton
+        <TextView
+            android:id="@+id/txtSlogan"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="QUẢN LÝ NHÀ HÀNG"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/text_20"
+            android:textStyle="bold"
+            android:background="@android:color/white"/>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            android:src="@drawable/img3" />
+
+
+        <Button
             android:id="@+id/btnSignIn"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/dimen_15"
-            android:layout_weight="1"
-            app:fButtonColor="@color/white"
+            android:background="@android:color/white"
             android:text="@string/Button2"
-            android:textColor="@android:color/black"
-            app:shadowColor="@android:color/black"
-            app:shadowEnabled="true"
-            app:shadowHeight="5dp"
-            app:cornerRadius="4dp"/>
+            android:textColor="@android:color/black" />
 
     </LinearLayout>
 </RelativeLayout>
