--- a/app/src/main/res/layout/add_food_item.xml
+++ b/app/src/main/res/layout/add_food_item.xml
@@ -13,62 +13,33 @@
         android:layout_margin="20dp"
         android:orientation="vertical">
 
-        <com.rengwuxian.materialedittext.MaterialEditText
+        <EditText
             android:id="@+id/editFoodName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Name"
-            android:text=""
-            android:textColor="@color/colorPrimary"
-            android:textColorHint="@color/colorPrimary"
-            android:textSize="34sp"
-            app:met_baseColor="@color/colorPrimary"
-            app:met_floatingLabel="highlight"
-            app:met_primaryColor="@color/colorPrimary"
-            app:met_singleLineEllipsis="true"></com.rengwuxian.materialedittext.MaterialEditText>
+            android:hint="Tên sản phẩm"
+            android:textSize="20sp"></EditText>
 
-        <com.rengwuxian.materialedittext.MaterialEditText
+        <EditText
             android:id="@+id/editFoodDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Description"
-            android:inputType="textMultiLine"
-            android:text=""
-            android:textColor="@color/colorPrimary"
-            android:textColorHint="@color/colorPrimary"
-            android:textSize="34sp"
-            app:met_baseColor="@color/colorPrimary"
-            app:met_floatingLabel="highlight"
-            app:met_primaryColor="@color/colorPrimary"
-            app:met_singleLineEllipsis="true"></com.rengwuxian.materialedittext.MaterialEditText>
+            android:hint="Mô tả"
+            android:textSize="20sp"></EditText>
 
-        <com.rengwuxian.materialedittext.MaterialEditText
+        <EditText
             android:id="@+id/editPrice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Price"
-            android:text=""
-            android:textColor="@color/colorPrimary"
-            android:textColorHint="@color/colorPrimary"
-            android:textSize="34sp"
-            app:met_baseColor="@color/colorPrimary"
-            app:met_floatingLabel="highlight"
-            app:met_primaryColor="@color/colorPrimary"
-            app:met_singleLineEllipsis="true"></com.rengwuxian.materialedittext.MaterialEditText>
+            android:hint="Giá"
+            android:textSize="20sp"></EditText>
 
-        <com.rengwuxian.materialedittext.MaterialEditText
+        <EditText
             android:id="@+id/editDiscount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Discount"
-            android:text=""
-            android:textColor="@color/colorPrimary"
-            android:textColorHint="@color/colorPrimary"
-            android:textSize="34sp"
-            app:met_baseColor="@color/colorPrimary"
-            app:met_floatingLabel="highlight"
-            app:met_primaryColor="@color/colorPrimary"
-            app:met_singleLineEllipsis="true"></com.rengwuxian.materialedittext.MaterialEditText>
+            android:hint="Giảm giá"
+            android:textSize="20sp"></EditText>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -76,7 +47,7 @@
             android:orientation="horizontal"
             android:weightSum="2">
 
-            <info.hoang8f.widget.FButton
+            <Button
                 android:id="@+id/btnSelect1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -85,15 +56,11 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
                 android:layout_weight="1"
-                android:text="Select"
-                android:textColor="@android:color/white"
-                app:cornerRadius="4dp"
-                app:fButtonColor="@color/bluegrey"
-                app:shadowColor="@android:color/black"
-                app:shadowEnabled="true"
-                app:shadowHeight="5dp" />
+                android:background="@android:color/black"
+                android:text="Chọn ảnh"
+                android:textColor="@android:color/white" />
 
-            <info.hoang8f.widget.FButton
+            <Button
                 android:id="@+id/btnUpload1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -102,17 +69,16 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
                 android:layout_weight="1"
-                android:text="Upload"
-                android:textColor="@android:color/white"
-                app:cornerRadius="4dp"
-                app:fButtonColor="@color/bluegrey"
-                app:shadowColor="@android:color/black"
-                app:shadowEnabled="true"
-                app:shadowHeight="5dp" />
+                android:background="@android:color/black"
+                android:text="Tải lên"
+                android:textColor="@android:color/white" />
 
 
         </LinearLayout>
-
+        <ImageView
+            android:id="@+id/imgUploadProduct"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"></ImageView>
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
